added your course instead of data structures hardcode index.html

--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
                     </div>
                     <div class="brand-text">
                         <h2>Vindexa</h2>
-                        <p>Data Structures</p>
+                        <p>Your Course</p>
                     </div>
                 </div>
             </div>
@@ -915,7 +915,7 @@
                 </div>
                 <h1 class="welcome-title">Ready to help you study! 🚀</h1>
                 <p class="welcome-subtitle">
-                    I've analyzed your course materials for <strong>Data Structures</strong>. Ask me anything or switch to one of the other modes!
+                    I've analyzed your course materials for <strong>your course</strong>. Ask me anything or switch to one of the other modes!
                 </p>
 
                 <!-- Feature Cards -->
@@ -994,7 +994,7 @@
             
             <div class="knowledge-base">
                 <i data-lucide="check-circle" class="icon-sm status-icon"></i>
-                <span>Knowledge base: 13 files from Data Structures</span>
+                <span>Knowledge base: 13 files from your course</span>
             </div>
         </div>
     </div>
