Update index.html coming soon sign

--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
                         </div>
                         <div>
                             <h2 class="coming-soon-title">COMING SOON</h2>
-                            <p class="coming-soon-subtitle">Get ready for the future of AI-powered learning</p>
+                            <p class="coming-soon-subtitle">Retreival Based learning</p>
                         </div>
                     </div>
                 </div>
